# JCB_DEMO_CPP

./: CMakeLists.txt  Makefile  README.md
include/: Game.hpp  Player.hpp
src/: Game.cpp  Game_utils.cpp  Player.cpp  main.cpp
